# cpp-waste-recycling-marcellBan

./: .gitignore  CMakeLists.txt
include/: Dustbin.h  DustbinErrors.hpp  Garbage.h  PlasticGarbage.h
include/dustbin/: Dustbin.h  Dustbin9k.h  DustbinErrors.hpp
include/garbage/: BottleCap.h  Garbage.h  MetalGarbage.h  PaperGarbage.h  PlasticGarbage.h
src/: Dustbin.cpp  Garbage.cpp  PaperGarbage.cpp  PlasticGarbage.cpp
src/dustbin/: Dustbin.cpp  Dustbin9k.cpp
src/garbage/: BottleCap.cpp  Garbage.cpp  MetalGarbage.cpp  PaperGarbage.cpp  PlasticGarbage.cpp
tests/: DustbinTests.cpp
